grafana-prometheus/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: prometheus
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
