grafana-prometheus/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: grafana
  namespace: grafana
spec:  
  rules:
  - host: grafana.kubeshore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port: 
              number: 80
  tls:
  - hosts:
    - grafana.kubeshore.com
    secretName: grafana-tls
